# GPlayer

./: .gitignore  CMakeLists.txt  Player.cpp  Player.h  database.sql  html.html  importer.py  main.cpp
Reproductor/: CMakeLists.txt  Player.cpp  Player.h  SimpleHTTPServer.cpp  SimpleHTTPServer.h  index_player.html  main.cpp
